
# can use ls | tr '\n' '\n' >listing.txt

GEDA_BITMAPS      = $(GEDADATADIR)/bitmap
bitmapdatadir     = $(GEDA_BITMAPS)
bitmapdata_16dir  = $(GEDA_BITMAPS)/16x16
bitmapdata_22dir  = $(GEDA_BITMAPS)/22x22
bitmapdata_24dir  = $(GEDA_BITMAPS)/24x24
bitmapdata_26dir  = $(GEDA_BITMAPS)/26x26
bitmapdata_28dir  = $(GEDA_BITMAPS)/28x28
bitmapdata_32dir  = $(GEDA_BITMAPS)/32x32
bitmapdata_36dir  = $(GEDA_BITMAPS)/36x36
bitmapdata_48dir  = $(GEDA_BITMAPS)/48x48
bitmapdata_64dir  = $(GEDA_BITMAPS)/64x64
bitmapdata_96dir  = $(GEDA_BITMAPS)/96x96
bitmapdata_128dir = $(GEDA_BITMAPS)/128x128
bitmapdata_256dir = $(GEDA_BITMAPS)/256x256


bitmapdata_16_DATA = geda_find_16x16.xpm	  	\
             	     geda_find_and_replace_16x16.xpm	\
            	     geda_name_tag_16x16.xpm		\
            	     geda_value_16x16.xpm

bitmapdata_22_DATA = geda_find_22x22.xpm		\
            	     geda_find_and_replace_22x22.xpm	\
            	     geda_find_attribute_22x22.xpm      \
            	     ghost_invisible_22x22.xpm		\
            	     geda_name_tag_22x22.xpm		\
            	     geda_name_value_22x22.xpm		\
            	     geda_value_22x22.xpm

bitmapdata_24_DATA = geda_find_24x24.xpm		\
            	     geda_find_and_replace_24x24.xpm	\
            	     geda_locate_reference_24x24.xpm	\
            	     ghost_invisible_24x24.xpm		\
            	     geda_name_tag_24x24.xpm		\
            	     geda_name_value_24x24.xpm		\
            	     geda_value_24x24.xpm

bitmapdata_26_DATA = geda_name_value_26x26.xpm
bitmapdata_28_DATA = geda_name_value_28x28.xpm
bitmapdata_32_DATA = geda_find_32x32.xpm		\
                     geda_find_and_replace_32x32.xpm	\
            	     ghost_invisible_32x32.xpm		\
            	     geda_name_tag_32x32.xpm		\
            	     geda_name_value_32x32.xpm		\
            	     geda_value_32x32.xpm

bitmapdata_36_DATA = geda_find_36x36.xpm		\
             	     geda_find_and_replace_36x36.xpm	\
             	     geda_name_tag_36x36.xpm		\
             	     geda_name_value_36x36.xpm		\
             	     geda_value_36x36.xpm

bitmapdata_48_DATA = geda_find_48x48.xpm		\
                     geda_find_and_replace_48x48.xpm

bitmapdata_64_DATA = geda_find_64x64.xpm		\
                     geda_find_and_replace_64x64.xpm

bitmapdata_96_DATA = geda_find_96x96.xpm		\
                     geda_find_and_replace_96x96.xpm

bitmapdata_128_DATA = geda_find_128x128.xpm		\
                      geda_find_and_replace_128x128.xpm
                      
bitmapdata_256_DATA = ghost_invisible_256x256.xpm       \
                      geda_value_256x256.png

EXTRA_DIST = $(bitmapdata_DATA) \
             README             \
             geda_bulb_24x26_off.png                    \
             geda_bulb_24x26_on.png                     \
             geda_switch_64x48_off.png                  \
             geda_switch_64x48_on.png

MOSTLYCLEANFILES = *.log *~
CLEANFILES = *.log *~
DISTCLEANFILES = *.log core FILE *~
MAINTAINERCLEANFILES = *.log *~ Makefile.in
