
# can use ls | tr '\n' '\n' >listing.txt

GEDA_BITMAPS      = $(GEDADATADIR)/bitmap
bitmapdatadir     = $(GEDA_BITMAPS)
bitmapdata_16dir  = $(GEDA_BITMAPS)/16x16
bitmapdata_22dir  = $(GEDA_BITMAPS)/22x22
bitmapdata_24dir  = $(GEDA_BITMAPS)/24x24
bitmapdata_26dir  = $(GEDA_BITMAPS)/26x26
bitmapdata_28dir  = $(GEDA_BITMAPS)/28x28
bitmapdata_32dir  = $(GEDA_BITMAPS)/32x32
bitmapdata_36dir  = $(GEDA_BITMAPS)/36x36
bitmapdata_48dir  = $(GEDA_BITMAPS)/48x48
bitmapdata_64dir  = $(GEDA_BITMAPS)/64x64
bitmapdata_96dir  = $(GEDA_BITMAPS)/96x96
bitmapdata_128dir = $(GEDA_BITMAPS)/128x128
bitmapdata_256dir = $(GEDA_BITMAPS)/256x256
	  
bitmapdata_DATA    = close_box.png                      \
		     geda-bus.png                       \
		     geda-arc.png                       \
		     geda-arc-edit.png                  \
		     geda-box.png                       \
		     geda_bulb_24x26_off.png            \
		     geda_bulb_24x26_on.png             \
		     geda-circle.png                    \
		     geda-circles.png                   \
		     geda-component.png                 \
                     geda-copy.png                      \
		     geda-display.png                   \
                     geda-grid-dot.png                  \
                     geda-grid-mesh.png                 \
                     geda-line.png                      \
                     geda-line-type.png                 \
                     geda-lock.png                      \
                     geda-net.png                       \
                     geda-new.png                       \
                     geda-magnet.png                    \
                     geda-mesh.png                      \
                     geda-mirror.png                    \
                     geda-move.png                      \
                     geda-multi.png                     \
                     geda-open-recent.png               \
                     geda-path.png                      \
                     geda-pin.png                       \
                     geda-pin-type.png                  \
                     geda-rotate.png                    \
                     geda-select.png                    \
                     geda-slot.png                      \
                     geda-snap-off.png                  \
                     geda-snap-on.png                   \
                     geda-show-nets.png                 \
		     geda_switch_48x36_off.png          \
		     geda_switch_48x36_on.png           \
		     geda_switch_64x48_off.png          \
		     geda_switch_64x48_on.png           \
                     geda-unlock.png                    \
		     geda-unselect-all.png              \
                     geda-zoom-box.png                  \
                     geda-zoom-pan.png                  \
		     geda-zoom-selection.png

bitmapdata_16_DATA = geda_find_16x16.xpm	  	\
		     geda_find_and_replace_16x16.xpm	\
		     geda_name_tag_16x16.xpm		\
		     geda_value_16x16.xpm

bitmapdata_22_DATA = gaf_add_attribute_22x22.png        \
		     gaf_demote_22x22.png               \
		     gaf_pdf_22x22.xpm                  \
		     gaf_promote_22x22.png              \
		     gaf_tools_22x22.xpm                \
		     geda_arc_22x22.png                 \
		     geda_arc_edit_22x22.png            \
		     geda_box_22x22.png                 \
		     geda_copy_22x22.png                \
		     geda_circle_22x22.xpm              \
		     geda_circles_22x22.png             \
		     geda_deselect_22x22.png            \
		     geda_demote_22x22.png              \
		     geda_display_22x22.png             \
		     geda_display_color_22x22.xpm       \
		     geda_eye_glasses_22x16.png         \
		     geda_grid_dot_22x22.png            \
		     geda_grid_mesh_22x22.png           \
		     geda_find_22x22.xpm		\
		     geda_find_and_replace_22x22.xpm	\
		     geda_find_attribute_22x22.png      \
		     geda_line_22x22.xpm                \
		     geda_line_type_22x22.png           \
		     geda_locate_reference_22x22.xpm    \
		     geda_lock_22x22.png                \
                     geda_magnet_22x22.png              \
		     geda_mesh_22x22.png                \
		     geda_mirror_22x22.png              \
		     geda_move_22x22.png                \
		     geda_multi_22x22.png               \
		     geda_name_tag_22x22.xpm		\
		     geda_name_value_22x22.xpm		\
		     geda_number_22x22.png              \
		     geda_pin_22x22.png                 \
		     geda_promote_22x22.png             \
		     geda_redcross_22x22.xpm            \
		     geda_rotate_22x22.png              \
		     geda_sheets_22x22.xpm              \
		     geda_select_22x22.png              \
		     geda_snap_off_22x22.png            \
		     geda_snap_on_22x22.png             \
		     geda_tools_22x22.xpm               \
		     geda_translate_22x22.png           \
		     geda_unlock_22x22.png              \
		     geda_value_22x22.xpm               \
		     geda_view_redraw_22x22.png         \
		     geda_zoom_box_22x22.png	        \
		     geda_zoom_extents_22x22.png        \
		     geda_zoom_limits_22x22.png         \
		     geda_zoom_in_22x22.png             \
		     geda_zoom_out_22x22.png            \
		     geda_zoom_pan_22x22.png            \
		     ghost_invisible_22x22.xpm		\
		     gschem_project_close_22x22.png

bitmapdata_24_DATA = gaf_add_attribute_24x24.png        \
		     gaf_demote_24x24.png               \
		     geda_deselect_24x24.png            \
		     gaf_pdf_24x24.xpm                  \
		     gaf_promote_24x24.png              \
		     gaf_tools_24x24.xpm                \
		     geda_arc_24x24.png                 \
		     geda_arc_edit_24x24.png            \
		     geda_box_24x24.png                 \
		     geda_copy_24x24.png                \
		     geda_circle_24x24.xpm              \
		     geda_circles_24x24.png             \
		     geda_display_24x24.png             \
		     geda_display_color_24x24.xpm       \
		     geda_demote_24x24.png              \
		     geda_film_roll_24x24.xpm           \
		     geda_find_24x24.xpm		\
		     geda_find_and_replace_24x24.xpm	\
		     geda_find_attribute_24x24.png      \
		     geda_grid_dot_24x24.png            \
		     geda_grid_mesh_24x24.png           \
		     geda_line_24x24.xpm                \
		     geda_line_type_24x24.png           \
		     geda_locate_reference_24x24.xpm	\
		     geda_lock_24x24.png                \
                     geda_magnet_24x24.png              \
		     geda_mesh_24x24.png                \
		     geda_mirror_24x24.png              \
		     geda_move_24x24.png                \
		     geda_multi_24x24.png               \
		     geda_name_tag_24x24.xpm		\
		     geda_name_value_24x24.xpm		\
		     geda_number_24x24.png              \
		     geda_pin_24x24.png                 \
		     geda_promote_24x24.png             \
		     geda_redcross_24x24.xpm            \
		     geda_rotate_24x24.png              \
		     geda_sheets_24x24.xpm              \
		     geda_select_24x24.png              \
		     geda_snap_off_24x24.png            \
		     geda_snap_on_24x24.png             \
		     geda_tools_24x24.xpm               \
		     geda_translate_24x24.png           \
		     geda_unlock_24x24.png              \
		     geda_value_24x24.xpm               \
		     geda_view_redraw_24x24.png         \
		     geda_zoom_box_24x24.png            \
		     geda_zoom_extents_24x24.png        \
		     geda_zoom_limits_24x24.png         \
		     geda_zoom_in_24x24.png             \
		     geda_zoom_out_24x24.png            \
		     geda_zoom_pan_24x24.png            \
		     ghost_invisible_24x24.xpm          \
		     gschem_project_close_24x24.png

bitmapdata_26_DATA = gaf_add_attribute_26x26.png        \
		     gaf_demote_26x26.png               \
		     geda_deselect_26x26.png            \
		     gaf_pdf_26x26.xpm                  \
		     gaf_promote_26x26.png              \
		     gaf_tools_26x26.xpm                \
		     geda_arc_26x26.png                 \
		     geda_arc_edit_26x26.png            \
		     geda_box_26x26.png                 \
		     geda_copy_26x26.png                \
		     geda_circle_26x26.xpm              \
		     geda_circles_26x26.png             \
		     geda_demote_26x26.png              \
		     geda_display_26x26.png             \
		     geda_display_color_26x26.xpm       \
		     geda_film_roll_26x26.xpm           \
		     geda_find_26x26.xpm		\
		     geda_find_attribute_26x26.png      \
		     geda_grid_dot_26x26.png            \
		     geda_grid_mesh_26x26.png           \
		     geda_line_26x26.xpm                \
		     geda_line_type_26x26.png           \
		     geda_locate_reference_26x26.xpm	\
		     geda_lock_26x26.png                \
                     geda_magnet_26x26.png              \
		     geda_mesh_26x26.png                \
		     geda_mirror_26x26.png              \
		     geda_move_26x26.png                \
		     geda_multi_26x26.png               \
		     geda_name_value_26x26.xpm          \
		     geda_name_tag_26x26.xpm		\
		     geda_number_26x26.png              \
		     geda_pin_26x26.png                 \
		     geda_promote_26x26.png             \
		     geda_redcross_26x26.xpm            \
		     geda_rotate_26x26.png              \
		     geda_sheets_26x26.xpm              \
		     geda_select_26x26.png              \
		     geda_snap_off_26x26.png            \
		     geda_snap_on_26x26.png             \
		     geda_tools_26x26.xpm               \
		     geda_translate_26x26.png           \
		     geda_value_26x26.xpm               \
		     geda_view_redraw_26x26.png         \
		     geda_unlock_26x26.png              \
		     geda_zoom_box_26x26.png            \
		     geda_zoom_extents_26x26.png        \
		     geda_zoom_limits_26x26.png         \
		     geda_zoom_in_26x26.png             \
		     geda_zoom_out_26x26.png            \
		     geda_zoom_pan_26x26.png            \
		     gschem_project_close_26x26.png

bitmapdata_28_DATA = gaf_add_attribute_28x28.png        \
		     gaf_demote_28x28.png               \
		     gaf_pdf_28x28.xpm                  \
		     gaf_promote_28x28.png              \
		     gaf_see_notes_28x20.png            \
		     gaf_tools_28x28.xpm                \
		     geda_arc_28x28.png                 \
		     geda_arc_edit_28x28.png            \
		     geda_box_28x28.png                 \
		     geda_copy_28x28.png                \
		     geda_circle_28x28.xpm              \
		     geda_circles_28x28.png             \
		     geda_display_28x28.png             \
		     geda_display_color_28x28.xpm       \
		     geda_demote_28x28.png              \
		     geda_deselect_28x28.png            \
		     geda_eye_glasses_28x20.png         \
		     geda_film_roll_28x28.xpm           \
		     geda_find_28x28.xpm		\
		     geda_find_attribute_28x28.png      \
		     geda_grid_dot_28x28.png            \
		     geda_grid_mesh_28x28.png           \
		     geda_line_28x28.xpm                \
		     geda_line_type_28x28.png           \
		     geda_locate_reference_28x28.xpm	\
		     geda_lock_28x28.png                \
                     geda_magnet_28x28.png              \
		     geda_mesh_28x28.png                \
		     geda_mirror_28x28.png              \
		     geda_move_28x28.png                \
		     geda_multi_28x28.png               \
		     geda_name_value_28x28.xpm		\
		     geda_name_tag_28x28.xpm		\
		     geda_number_28x28.png              \
		     geda_pin_28x28.png                 \
		     geda_promote_28x28.png             \
		     geda_redcross_28x28.xpm            \
		     geda_rotate_28x28.png              \
		     geda_sheets_28x28.xpm              \
		     geda_select_28x28.png              \
		     geda_snap_off_28x28.png            \
		     geda_snap_on_28x28.png             \
		     geda_tools_28x28.xpm               \
		     geda_translate_28x28.png           \
		     geda_unlock_28x28.png              \
		     geda_value_28x28.xpm               \
		     geda_view_redraw_28x28.png         \
		     geda_zoom_box_28x28.png            \
		     geda_zoom_extents_28x28.png        \
		     geda_zoom_limits_28x28.png         \
		     geda_zoom_in_28x28.png             \
		     geda_zoom_out_28x28.png            \
		     geda_zoom_pan_28x28.png            \
		     ghost_invisible_28x28.xpm          \
		     gschem_project_close_28x28.png

bitmapdata_32_DATA = gaf_add_attribute_32x32.png        \
		     gaf_demote_32x32.png               \
		     gaf_pdf_32x32.xpm                  \
		     gaf_promote_32x32.png              \
		     gaf_see_notes_32x23.png            \
		     gaf_tools_32x32.xpm                \
		     geda_arc_32x32.png                 \
		     geda_arc_edit_32x32.png            \
		     geda_box_32x32.png                 \
		     geda_circle_32x32.xpm              \
		     geda_circles_32x32.png             \
		     geda_copy_32x32.png                \
		     geda_demote_32x32.png              \
		     geda_deselect_32x32.png            \
		     geda_display_32x32.png             \
		     geda_display_color_32x32.xpm       \
		     geda_eye_glasses_32x23.png         \
		     geda_film_roll_32x32.xpm           \
		     geda_find_32x32.xpm		\
		     geda_find_and_replace_32x32.xpm	\
		     geda_find_attribute_32x32.png      \
		     geda_grid_dot_32x32.png            \
		     geda_grid_mesh_32x32.png           \
		     geda_line_32x32.xpm                \
		     geda_line_type_32x32.png           \
		     geda_lock_32x32.png                \
		     geda_locate_reference_32x32.xpm	\
                     geda_magnet_32x32.png              \
		     geda_mesh_32x32.png                \
		     geda_mirror_32x32.png              \
		     geda_move_32x32.png                \
		     geda_multi_32x32.png               \
		     geda_name_tag_32x32.xpm		\
		     geda_name_value_32x32.xpm		\
		     geda_number_32x32.png              \
		     geda_pin_32x32.png                 \
		     geda_promote_32x32.png             \
		     geda_redcross_32x32.xpm            \
		     geda_rotate_32x32.png              \
		     geda_sheets_32x32.xpm              \
		     geda_select_32x32.png              \
		     geda_snap_off_32x32.png            \
		     geda_snap_on_32x32.png             \
		     geda_tools_32x32.xpm               \
		     geda_translate_32x32.png           \
		     geda_unlock_32x32.png              \
		     geda_value_32x32.xpm               \
		     geda_view_redraw_32x32.png         \
		     geda_zoom_box_32x32.png            \
		     geda_zoom_extents_32x32.png        \
		     geda_zoom_limits_32x32.png         \
		     geda_zoom_in_32x32.png             \
		     geda_zoom_out_32x32.png            \
		     geda_zoom_pan_32x32.png            \
		     ghost_invisible_32x32.xpm		\
		     gschem_project_close_32x32.png

bitmapdata_36_DATA = gaf_see_notes_36x26.png            \
		     geda_eye_glasses_36x26.png         \
		     geda_find_36x36.xpm		\
             	     geda_find_and_replace_36x36.xpm	\
             	     geda_name_tag_36x36.xpm		\
             	     geda_name_value_36x36.xpm		\
		     geda_redcross_32x32.xpm            \
             	     geda_value_36x36.xpm

bitmapdata_48_DATA = geda_demote_48x48.xpm              \
		     geda_arc_edit_48x48.png            \
		     geda_find_48x48.xpm		\
		     geda_find_and_replace_48x48.xpm    \
		     geda_redcross_48x48.xpm

bitmapdata_64_DATA = geda_find_64x64.xpm		\
		     geda_find_and_replace_64x64.xpm    \
		     geda_redcross_64x64.xpm            \
		     geda_zoom_pan_64x64.png

bitmapdata_96_DATA = geda_find_96x96.xpm		\
		     geda_find_and_replace_96x96.xpm    \
		     geda_redcross_96x96.xpm

bitmapdata_128_DATA = gaf_pdf_128x128.xpm               \
		      gaf_tools_128x128.xpm             \
		      geda_display_color_128x128.xpm    \
		      geda_film_roll_128x128.xpm        \
		      geda_find_128x128.xpm		\
		      geda_find_and_replace_128x128.xpm \
		      geda_man_128x128.xpm              \
		      geda_redcross_128x128.xpm         \
		      geda_tools_128x128.xpm            \
		      geda_zoom_selection_128x128.png

bitmapdata_256_DATA = ghost_invisible_256x256.xpm       \
                      geda_value_256x256.png

EXTRA_DIST = $(bitmapdata_DATA) \
             $(bitmapdata_16_DATA) \
             $(bitmapdata_22_DATA) \
             $(bitmapdata_24_DATA) \
             $(bitmapdata_26_DATA) \
             $(bitmapdata_28_DATA) \
             $(bitmapdata_32_DATA) \
             $(bitmapdata_36_DATA) \
             $(bitmapdata_48_DATA) \
             $(bitmapdata_64_DATA) \
             $(bitmapdata_96_DATA) \
             $(bitmapdata_128_DATA) \
             $(bitmapdata_256_DATA) \
             README

MOSTLYCLEANFILES     = *.log *~
CLEANFILES           = *.log *~
DISTCLEANFILES       = *.log core FILE *~
MAINTAINERCLEANFILES = *.log *~ Makefile.in
